# ssi

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  LICENSE  README.md  VERSIONING.md  get_version.sh  meson.build  ubuntu.dockerfile
debian/: changelog.in  control.in  libssi-dev.install  libssi-doc.install  libssi.install.in  rules  rules.in  ssi.install
doc/: meson.build
doc/libssi/: doxyfile.in  meson.build
docker/: Dockerfile_ubuntu_bionic  ubuntu_focal.dockerfile
ganvigar/: dev.conf
include/: meson.build
include/ssi/: local_time.hpp  thread_count.hpp
jq/: execs.jq  lib_versions.jq
lib/: meson.build
lib/ssi/: local_time.cpp  meson.build  thread_count.cpp
man/: meson.build  ssi.1
tools/: build_deb.sh  clang-format.sh  clang-tidy.sh  debianize.sh  docker.sh
unit_tests/: meson.build
unit_tests/ssi/: local_time_test.cpp  meson.build  thread_count_test.cpp
